--- a/.gitignore
+++ b/.gitignore
@@ -20,27 +20,30 @@ bin/
 obj/
 _ReSharper.*/
 
-hmailserver/source/Server/hMailServer/Debug/
-hmailserver/source/Server/hMailServer/hMailServer.h
-hmailserver/source/Server/hMailServer/Debug (x64)/*
-hmailserver/source/WebAdmin/include_versioncheck.php
-hmailserver/source/Server/hMailServer/hMailServer.ncb
-hmailserver/source/Server/hMailServer/hMailServer_i.c
-hmailserver/source/Server/hMailServer/hMailServer_p.c
-hmailserver/source/Server/hMailServer/x64/*
-hmailserver/source/Server/hMailServer/Release/*
+/hmailserver/installation/Output/*
+
+/hmailserver/source/Server/hMailServer/hMailServer.h
+/hmailserver/source/Server/hMailServer/hMailServer.ncb
+/hmailserver/source/Server/hMailServer/hMailServer_i.c
+/hmailserver/source/Server/hMailServer/hMailServer_p.c
+/hmailserver/source/Server/hMailServer/dlldata.c
+/hmailserver/source/Server/hMailServer/hMailServer/*
+/hmailserver/source/Server/hMailServer/x64/*
+
+/hmailserver/source/Server/hMailServer.Minidump/x64/*
+
+/hmailserver/source/WebAdmin/include_versioncheck.php
+
+/hmailserver/test/RegressionTests/TestResult.xml
+/hmailserver/test/packages/*
+/hmailserver/test/RegressionTests/packages/*
+
+/hmailserver-libs
+/altimailserver-libs
+
 *.vcxproj.filters
 *.orig
 *.sdf
 *.opensdf
 *.ipch
-
-hmailserver/test/RegressionTests/TestResult.xml
-hmailserver/installation/Output/*
-
-hmailserver/source/Server/hMailServer.Minidump/Debug/*
-hmailserver/source/Server/hMailServer.Minidump/Release/*
-hmailserver/source/Server/hMailServer.Minidump/x64/*
 .vs
-/hmailserver/test/packages/*
-/hmailserver/test/RegressionTests/packages/*
